--- a/main.css
+++ b/main.css
@@ -1,3 +1,15 @@
 body {
     text-align: center;
 }
+
+h3 {
+    margin-top: 5px;
+}
+
+#adv-event-loading {
+    display: block;
+}
+
+#adv-event-loading-hidden {
+    display: none;
+}
